# leetcode_agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TASK.md  idea.md  pyproject.toml  transfer.sh  unpack.sh
design/: 146_lru_cache.py
dp/: 53_maximum_subarray.py  5_longest_palindromic_substring.py
src/lc/: agent.py  ai.py  cli.py  codetop_api.py  config.py  db.py  display.py  leetcode_api.py  models.py  planner.py  scheduler.py  state.py  tool_defs.py  tools.py  ui.py
src/lc/tool_impl/: __init__.py  problems.py  subagents.py  workspace.py
tests/: test_scenarios.py
